fixed some fonts

--- a/P!_openbox+tint2_theme/Details/todo
+++ b/P!_openbox+tint2_theme/Details/todo
@@ -1,3 +1,4 @@
 -fix up gtk+2 theme. certain colour choiced make some things slightly unintuitive 
 
 -add gtk+3 theme.
+-possibly get a better font for tint2
